# pyEddy3D

./: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: python-app.yml  python-tests.yml
pyEddy3D/: SimCompleted.py  __init__.py  cli.py  simulation.py  status.py
pyeddy3d/: main.py
tests/: test_result.py
